--- a/index.html
+++ b/index.html
@@ -2054,7 +2054,7 @@ url('https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-4.0.3
       
       <div class="about-doctor">
         <div class="doctor-img-container reveal reveal-from-left">
-          <img src="https://images.unsplash.com/photo-1622253692010-333f2da6031d?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=700&q=80" alt="Dr. Aditya" class="doctor-img">
+          <img src="adiya.jpeg" alt="Dr. Aditya" class="doctor-img">
           <div class="doctor-experience">12+ Years Experience</div>
         </div>
         <div class="doctor-content reveal reveal-from-right">
