--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
     }
 
     .logo img {
-      height: 50px;
+      height: 180px;
       width: auto;
     }
 
@@ -1954,11 +1954,11 @@ url('https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-4.0.3
   <header class="header" id="header">
     <div class="container nav-container">
       <div class="logo">
-        <img src="logo.png" alt="Dr. Aditya Homeo Clinic Logo">
-        <div>
+        <img src="logo (2).png" alt="Dr. Aditya Homeo Clinic Logo">
+        <!-- div>
           <span class="logo-text">Dr. Aditya Homeo Clinic</span>
           <span class="tagline">Healing Naturally, Caring Personally</span>
-        </div>
+        </div -->
       </div>
       <nav class="nav-links" id="navLinks">
         <a href="#home" class="nav-link active">Home</a>
